@startuml Diagrama de Classe - Pizzaria

class Cliente {
    +nome: String
    +telefone: String
    +endereco: String
}

class Atendente {
    +nome: String
    +login(usuario: String, senha: String): boolean
    +registrarPedido(cliente: Cliente, pedido: Pedido)
    +cadastrarCliente(cliente: Cliente)
    +listarPedidos(): List<Pedido>
    +atualizarStatusPedido(pedido: Pedido, status: String)
}

class Pizza {
    +tamanho: String  // "Média", "Grande", "Gigante"
    +sabor: String
    +preco: float
}

class Pedido {
    +id: int
    +dataHora: DateTime
    +status: String
    +cliente: Cliente
    +pizzas: List<Pizza>
    +valorTotal: float
    +calcularTotal(): float
    +pagarPedido(): void
}

Cliente "1..1" -left-> "1..1" Atendente : apenas fornecido ao atendente
Atendente "1..1" -- "*" Pedido : gerencia
Pedido "1..1" -- "*" Pizza : contém

@enduml
